kubernetes/server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: server
  namespace: godoc
  labels:
    name: server
    role: web
spec:
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      name: server
      labels:
        name: server
        role: web
    spec:
      containers:
      - image: quay.io/wantedly/godoc:latest
        name: server
        ports:
        - containerPort: 8080
      - image: quay.io/dtan4/nginx-basic-auth-proxy
        name: nginx-basic-auth-proxy
        ports:
        - containerPort: 8081
