kubernetes/gae.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: godoc
  labels:
    app: api
    role: web
spec:
  selector:
    matchLabels:
      app: api
      role: web
  replicas: 3
  template:
    metadata:
      labels:
        app: api
        role: web
    spec:
      containers:
      - name: api
        image: bgpat/docker-gae:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: godoc
spec:
  selector:
    app: api
    role: web
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
