kubernetes/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: godoc
  labels:
    name: redis
    role: db
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    name: redis
    role: db
  type: NodePort
